--- a/index.html
+++ b/index.html
@@ -22,13 +22,13 @@
     </div>
     <div class="main">
         <div class="welcome">
-            <p class="welcome_text">Welcome!!!</p>
+            <p class="welcome_text">Welcome!</p>
         </div>
         <div class="about">
             <h2>About us</h2>
             <p>
                 We are a group of friendly opensource developers
-                who make opensource (duh) tools, games, code examples, etc. for the world
+                who make opensource tools, games, code examples, etc. for the world
             </p>
             </div>
             <br>
