--- a/index.html
+++ b/index.html
@@ -12,6 +12,7 @@
 </head>
 <body>
     <div class="navbar">
+        <!-- <img src="image2vector.svg" alt="you're a monkey lol" class="logo"> -->
         <nav>
             <ul>
                 <li><a href="#">Home</a></li>
