--- a/index.html
+++ b/index.html
@@ -12,13 +12,11 @@
 </head>
 <body>
     <div class="navbar">
-        <!-- <img src="image2vector.svg" alt="you're a monkey lol" class="logo"> -->
         <nav>
-            <ul>
-                <li><a href="#">Home</a></li>
-                <li><a href="https://www.github.com/ATeXTeam">Github</a></li>
-                <li><a href="blog/index.html">Blog</a></li>
-            </ul>
+            <!-- <img src="ATeX.svg" alt="you're a monkey lol" class="logo"> -->
+            <a href="#">Home</a>
+            <a href="https://www.github.com/ATeXTeam">Github</a>
+            <a href="blog/index.html">Blog</a>
         </nav>
     </div>
     <div class="main">
